finish 26(Registering a new user)

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.17.0",
+    "bcryptjs": "^2.4.3",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
@@ -23,6 +24,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
