--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.17.0",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
