finish 69 (Setting up Cloudinary)

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@
 DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 
 AUTH_SECRET='somethingreallysecret'
+
+# 69 (Setting up Cloudinary)
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="your cloud name"
+NEXT_PUBLIC_CLOUDINARY_API_KEY="your api key"
+CLOUDINARY_API_SECRET="api secret"
