--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@nextui-org/react": "^2.4.6",
     "@prisma/client": "^5.17.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.4.0",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
+    "next-cloudinary": "^6.9.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
