--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@prisma/client": "^5.17.0",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^2.4.0",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.19",
     "next": "14.2.5",
