finish 97 (Setting up Pusher)

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,8 @@ AUTH_SECRET='somethingreallysecret'
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="your cloud name"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="your api key"
 CLOUDINARY_API_SECRET="api secret"
+
+# 97 (Setting up Pusher)
+NEXT_PUBLIC_PUSHER_APP_KEY="4989e301897a10aab070"
+PUSHER_APP_ID="Your app id"
+PUSHER_SECRET="Your pusher secret"
