--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.20",
     "next-cloudinary": "^6.9.0",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
