finish 144 (Adding an email provider)

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,6 @@ CLOUDINARY_API_SECRET="api secret"
 NEXT_PUBLIC_PUSHER_APP_KEY="4989e301897a10aab070"
 PUSHER_APP_ID="Your app id"
 PUSHER_SECRET="Your pusher secret"
+
+# 144. Adding an email provider
+RESEND_API_KEY="your resend api key"
