--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "udemy-next-match-3",
   "version": "0.1.0",
@@ -29,6 +28,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "resend": "^4.0.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
