finish 150. Social Login part 1

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ PUSHER_SECRET="Your pusher secret"
 
 # 144. Adding an email provider
 RESEND_API_KEY="your resend api key"
+
+# 150. Social Login part 1
+GITHUB_CLIENT_ID="client id"
+GITHUB_CLIENT_SECRET="client secret"
