finish 154. Adding the Google provider

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ RESEND_API_KEY="your resend api key"
 # 150. Social Login part 1
 GITHUB_CLIENT_ID="client id"
 GITHUB_CLIENT_SECRET="client secret"
+
+# 154. Adding the Google provider
+GOOGLE_CLIENT_ID="client id"
+GOOGLE_CLIENT_SECRET="client secret"
