finish 171. Preparing the app for publishing

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,6 @@ GITHUB_CLIENT_SECRET="client secret"
 # 154. Adding the Google provider
 GOOGLE_CLIENT_ID="client id"
 GOOGLE_CLIENT_SECRET="client secret"
+
+# 171. Preparing the app for publishing
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
